add user restController added and entity date attributes are modified to string

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jade?useSSL=false&serverTimezone=UTC
+spring.datasource.username=amin
+spring.datasource.password=amin
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.security.user.name=amin
+spring.security.user.password=amin
 
